Responsive major completed

--- a/flatastic/css/custom.css
+++ b/flatastic/css/custom.css
@@ -2117,7 +2117,7 @@ span.country:before{content: "Country :";}
 .view-product-list .flag-shop > a{margin: 0}
 .p_right{position: absolute;right: 0;bottom: 0}
 .p_center input.form-submit{float: left}
-.p-price,.p-product .field-field-regular-price,.p-product .field-commerce-price{display: inline-block}
+.p-price,.p-product .field-field-regular-price,.p-product .field-commerce-price{display: block}
 .field-field-regular-price{text-decoration: line-through}
 .form-item-attributes-field-size > select{width: 100px;border: 1px solid #e2e6e7}
 .form-item-attributes-field-color > div > div{display: inline-block}
@@ -2456,9 +2456,79 @@ margin-left: 40px;
     opacity: 1;
   }
 
-  .front .owl-carousel .owl-wrapper-outer.autoHeight {
+  /*.front .owl-carousel .owl-wrapper-outer.autoHeight {
     height: auto !important
+  }*/
+
+  .front #product_block-block_new_collection figcaption h5 {
+    width: auto;
   }
+  .front #product_block-block_new_collection figcaption h5 a {
+    text-transform: uppercase;
+  }
+  .front #product_block-block_new_collection figcaption > *:not(h5) {
+    display: none;
+  }
+
+  #footer .vertical_list {
+    text-align: center;
+  }
+
+  #footer .vertical_list li {
+    display: inline-block;
+    padding: 0px 16px;
+  }
+
+  #footer .vertical_list li a {
+    border: 0px;
+    text-transform: uppercase;
+  }
+
+  #footer .copy_right {
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+  .footer_top_part {
+    border-top: 1px solid #000;
+  }
+
+  .footer_wrap {
+    padding: 220px 0px 180px 0px;
+    text-align: center;
+  }
+
+  .footer_wrap h1, .footer_wrap p {
+    text-transform: uppercase;
+    font-size: 30px !important;
+    color: #000;
+    margin-bottom: 15px;
+  }
+
+  .footer_wrap input.collect_mail {
+    color: #000;
+      background: #fff;
+      border: 1px solid #000;
+      width: 500px;
+      line-height: 69px;
+      height: 62px;
+      text-transform: uppercase;
+      font-size: 20px;
+  }
+
+  .footer_wrap input.sub_btn {
+    background: url(../images/sub_btn.jpg) no-repeat;
+    height: 65px;
+    width: 59px;
+  }
+  /*#product_block-block_new_collection figcaption > div.clearfix div.commerce-product-field-commerce-price {
+    float: left;
+    margin-right: 25px;
+  }*/
+  /*.p-quantity {
+    clear: inherit;
+    float: left;
+  }*/
   /* for desktop custom ends shiv */
 
 }
@@ -2691,7 +2761,99 @@ margin-left: 40px;
 
 
 .front .product_item, .front .owl-item > figure > a, .front .product_item, .front .owl-item > .photoframe a > img {
+  height: 190px;
+  float: left;
+  width: 170px !important;
+  position: static !important;
+  transform: inherit !important;
+  margin-top: 0;
+}
 
+.front .view-id-product_block .nav_buttons_wrap {
+  display: none;
+}
+.front #product_block-block_new_collection figcaption > *:not(h5) {
+  display: none;
+}
+
+.front #product_block-block_new_collection figcaption > div.clearfix {
+  display: block;
+}
+.front #product_block-block_new_collection figcaption > div.clearfix.m_bottom_15.relative {
+  display: none;
+}
+.front #product_block-block_new_collection figcaption > div.clearfix > div {
+  display: none;
+}
+
+.front #product_block-block_new_collection figcaption > div.clearfix div.commerce-product-field-commerce-price {
+  display: block;
+}
+.front #product_block-block_new_collection figcaption h5 {
+  margin-bottom: 0;
+}
+.footer_wrap h1, .footer_wrap p {
+  color: #000;
+  font-size: 25px !important;
+  text-transform: uppercase;
+  font-size: 30px;
+  text-align: center;
+}
+.footer_wrap {
+  padding: 25px 0px !important;
+}
+.simplenews-subscribe {
+    width: auto;
+    margin: 25px;
+}
+.form-item-mail {
+  margin-left: 20px;
+}
+.simplenews-subscribe .form-text, #simplenews-subscriptions-multi-block-form .form-text {
+    color: #000;
+    background: #fff;
+    border: 1px solid #000;
+    width: 215px;
+    line-height: 69px;
+    height: 50px;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+.simplenews-subscribe .form-submit, #simplenews-subscriptions-multi-block-form .form-submit {
+  height: 49px;
+}
+
+#footer .vertical_list {
+  text-align: center;
+}
+
+#footer .vertical_list li {
+  display: inline-block;
+  padding: 0px 16px;
+}
+
+#footer .vertical_list li a {
+  border: 0px;
+  text-transform: uppercase;
+}
+.footer_top_part {
+  border-top: 1px solid #000;
+  padding-bottom: 0;
+}
+
+.product_single_preview .qv_preview > img {
+  height: 438px;
+  width: 438px;
+}
+
+.welcome_text {
+  font-size: 17px;
+  text-transform: uppercase;
+  color: #fff;
+  background: #000;
+  padding-left: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 /* custom css for devices ends shiv */
 
@@ -3147,7 +3309,7 @@ body {
 /* item css start */
 .front .category_grid .product_item {
   width: 503px;
-  height: 285px;
+  height: 222px;
 }
 
 .front .col-lg-9 {
@@ -3198,10 +3360,6 @@ h2.pane-title, .featured_wrap span h2 {
 
 .view-display-id-block_featured .products_container > div:nth-child(n+3) {
   /*display: none;*/
-}
-
-.view-display-id-block_featured figure figcaption {
-  display: none;
 }
 
 .view-display-id-block_featured figure > a.m_bottom_15 {
@@ -3296,69 +3454,6 @@ h2.pane-title, .featured_wrap span h2 {
 }
 
 .cat_list { opacity:0;}
-
-.front #product_block-block_new_collection figcaption h5 {
-  width: auto;
-}
-.front #product_block-block_new_collection figcaption h5 a {
-  text-transform: uppercase;
-}
-.front #product_block-block_new_collection figcaption > *:not(h5) {
-  display: none;
-}
-
-#footer .vertical_list {
-  text-align: center;
-}
-
-#footer .vertical_list li {
-  display: inline-block;
-  padding: 0px 16px;
-}
-
-#footer .vertical_list li a {
-  border: 0px;
-  text-transform: uppercase;
-}
-
-#footer .copy_right {
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.footer_top_part {
-  border: 1px solid #000;
-}
-
-.footer_wrap {
-  padding: 220px 0px 180px 0px;
-  text-align: center;
-}
-
-.footer_wrap h1, .footer_wrap p {
-  text-transform: uppercase;
-  font-size: 30px !important;
-  color: #000;
-  margin-bottom: 15px;
-}
-
-.footer_wrap input.collect_mail {
-  color: #000;
-    background: #fff;
-    border: 1px solid #000;
-    width: 500px;
-    line-height: 69px;
-    height: 62px;
-    text-transform: uppercase;
-    font-size: 20px;
-}
-
-.footer_wrap input.sub_btn {
-  background: url(../images/sub_btn.jpg) no-repeat;
-  height: 65px;
-  width: 59px;
-}
-
 
 .black_bg {
   background: #000;
