--- a/flatastic/css/custom.css
+++ b/flatastic/css/custom.css
@@ -2547,6 +2547,24 @@ margin-left: 40px;
     clear: inherit;
     float: left;
   }*/
+  .message {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: rgba(0, 0, 0, 0.5);
+    top: 0px;
+    display: none;
+  }
+
+  .message > .container {
+    position: fixed;
+    width: 500px;
+    z-index: 999;
+    left: 50%;
+    margin-left: -250px;
+    top: 50%;
+  }
   /* for desktop custom ends shiv */
 
 }
@@ -2892,6 +2910,22 @@ margin-left: 40px;
 
 .front .glass_wrap .text_block {
   margin-top: 30px;
+}
+.message {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: rgba(0, 0, 0, 0.5);
+  top: 0px;
+  display: none;
+}
+
+.message > .container {
+  position: fixed;
+  width: 59%;
+  z-index: 999;
+  top: 50%;
 }
 /* custom css for devices ends shiv */
 
