--- a/flatastic/css/custom.css
+++ b/flatastic/css/custom.css
@@ -44,7 +44,7 @@ div.throbber {
     width: 32px !important;
     z-index: 9999 !important;
 }
-.p-quantity{clear: both}
+.p-quantity{clear: both; margin-top: 20px;}
 /*margin*/
 .m_left_80{margin-left: 80px;}
 .m-20{
@@ -254,7 +254,7 @@ ul.mega_menu > .f_left > a{
 }
 .comment-form .form-text{
     width: 100%;
-    border-radius: 4px;
+    border-radius: 0px;
 }
 .view-blog-latest- .clearfix.m-bottom-15:last-child hr.m_bottom_15,#block-views-product-block-block-1 .widget_content hr.m_bottom_15:last-child,#block-art-flickr-wishlish .widget_content hr.m_bottom_15:last-child{
     display: none;
@@ -2449,7 +2449,7 @@ margin-left: 40px;
     -moz-transition: all 1s ease;
     -ms-transition: all 1s ease;
     transition: all 1s ease;
-    opacity: 0.7;
+    opacity: 0.8;
   }
 
   .front .product_item, .front .owl-item > .photoframe a > img:hover {
@@ -2464,8 +2464,23 @@ margin-left: 40px;
     width: auto;
   }
   .front #product_block-block_new_collection figcaption h5 a {
-    text-transform: uppercase;
+    white-space: inherit !important;
   }
+  .front #product_block-block_new_collection > .owl-wrapper-outer {
+    height: 640px !important;
+  }
+  .front #block-views-testimonial-block-1 {
+    padding: 0px 0px 50px 0px;
+  }
+  #block-views-testimonial-block-1 .view-id-testimonial {
+    margin: 0 auto;
+    width: 1170px;
+  }
+  /*#block-simplenews-28 > content {
+    width: 1170px;
+    margin: 0 auto;
+    text-align: center;
+  }*/
   .front #product_block-block_new_collection figcaption > *:not(h5) {
     display: none;
   }
@@ -2492,9 +2507,11 @@ margin-left: 40px;
   .footer_top_part {
     border-top: 1px solid #000;
   }
-
+  .page-checkout .footer_top_part:first-child {
+    border: 0px;
+  }
   .footer_wrap {
-    padding: 220px 0px 180px 0px;
+    padding: 30px 0px 30px 0px;
     text-align: center;
   }
 
@@ -2578,6 +2595,21 @@ margin-left: 40px;
     font-size: 40px;
     margin-top: 14px;
     display: block;
+  }
+  #block-views-testimonial-block-1 {
+    margin-top: 68px;
+    border: 0px solid #000;
+    padding: 15px;
+  }
+  .owl-carousel .owl-item {
+    /*width: 112px !important;*/
+  }
+  .testiomials_carousel .owl-wrapper-outer {
+    height: auto;
+  }
+  .testiomials_carousel blockquote {
+    color: #000;
+    font-size: 1.4em;
   }
   /* for desktop custom ends shiv */
 
@@ -2941,6 +2973,14 @@ margin-left: 40px;
   z-index: 999;
   top: 50%;
 }
+
+.guest_nav {
+  padding-left: 17px;
+  color: white;
+  background: black;
+  padding: 5px 0px 5px 15px;
+  font-size: 1.2em;
+}
 /* custom css for devices ends shiv */
 
 }
@@ -2986,7 +3026,7 @@ margin-left: 40px;
 @media only screen and (max-width: 550px){
     .pane-interior-portfolio .d_table_cell{overflow-x: scroll}
     /* custom css start shiv */
-      .front .owl-item {
+      .front #product_block-block_new_collection .owl-item {
         width: 172px !important;
       }
       .front .product_item, .front .owl-item > figure > a, .front .product_item, .front .owl-item > .photoframe a > img {
@@ -3000,6 +3040,17 @@ margin-left: 40px;
       .front .glass_wrap {
         margin-bottom: 30px;
       }
+      #block-views-testimonial-block-1 {
+        display: none;
+      }
+    .product_detail_title {
+      line-height: 28px;
+      font-size: 1.5em;
+    }
+
+    #footer {
+      width: 96%;
+    }
     /* custom css end shiv */
 }
 
@@ -3450,6 +3501,7 @@ h2.pane-title, .featured_wrap span h2 {
   background: #fff;
   padding: 0px 7px;
   text-transform: uppercase;
+  font-size: 26px;
 }
 .featured_wrap {
   text-align: center;
@@ -3580,6 +3632,7 @@ h2.pane-title, .featured_wrap span h2 {
 }
 
 .black_bg p {
+  color: #fff;
   font-size: 18px;
   line-height: 30px;
   font-style: italic;
